Check return value of getaddrinfo for non-zero instead of less-than-zero (XERCESC-1871).

git-svn-id: https://svn.apache.org/repos/asf/xerces/c/trunk@778863 13f79535-47bb-0310-9956-ffa450edef68